@@ -72,7 +72,7 @@ public class ReportService {
             .countRecordingsPerCase()
             .stream()
             .map(data -> new RecordingsPerCaseReportDTO((Case) data[0], ((Long) data[1]).intValue()))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Transactional
@@ -82,7 +82,7 @@ public class ReportService {
             .stream()
             .map(EditReportDTO::new)
             .sorted(Comparator.comparing(EditReportDTO::getCreatedAt))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Transactional
@@ -97,7 +97,7 @@ public class ReportService {
             .stream()
             .map(SharedReportDTO::new)
             .sorted(Comparator.comparing(SharedReportDTO::getSharedAt))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Transactional
@@ -107,7 +107,7 @@ public class ReportService {
             .stream()
             .map(ScheduleReportDTO::new)
             .sorted(Comparator.comparing(ScheduleReportDTO::getScheduledFor))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Transactional
@@ -117,7 +117,7 @@ public class ReportService {
                 .findAllAccessAttempts()
                 .stream()
                 .map(this::toPlaybackReport)
-                .collect(Collectors.toList());
+                .toList();
         } else if (source == AuditLogSource.PORTAL || source == AuditLogSource.APPLICATION) {
             final var activityPlay = "Play";
             final var functionalAreaVideoPlayer = "Video Player";
@@ -133,7 +133,7 @@ public class ReportService {
                 )
                 .stream()
                 .map(this::toPlaybackReport)
-                .collect(Collectors.toList());
+                .toList();
         } else {
             throw new NotFoundException("Report for playback source: " + source);
         }
@@ -146,7 +146,7 @@ public class ReportService {
             .stream()
             .map(CompletedCaptureSessionReportDTO::new)
             .sorted(Comparator.comparing(CompletedCaptureSessionReportDTO::getScheduledFor))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Transactional
@@ -166,7 +166,7 @@ public class ReportService {
             .stream()
             .map(this::getParticipantsForRecording)
             .flatMap(List::stream)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private List<RecordingParticipantsReportDTO> getParticipantsForRecording(Recording recording) {
@@ -176,10 +176,21 @@ public class ReportService {
             .getParticipants()
             .stream()
             .map(participant -> new RecordingParticipantsReportDTO(participant, recording))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     private PlaybackReportDTO toPlaybackReport(Audit audit) {
+        // S28-3604 discovered audit details records Recording Id as recordingId _and_ recordinguid
+        var auditDetails = audit.getAuditDetails() != null && !audit.getAuditDetails().isNull();
+        UUID recordingId = null;
+        if (auditDetails) {
+            if (audit.getAuditDetails().hasNonNull("recordingId")) {
+                recordingId = UUID.fromString(audit.getAuditDetails().get("recordingId").asText());
+            } else if (audit.getAuditDetails().hasNonNull("recordinguid")) {
+                recordingId = UUID.fromString(audit.getAuditDetails().get("recordinguid").asText());
+            }
+        }
+
         return new PlaybackReportDTO(
             audit,
             audit.getCreatedBy() != null
@@ -189,10 +200,8 @@ public class ReportService {
                             .map(AppAccess::getUser)
                             .orElse(null))
                 : null,
-            audit.getAuditDetails() != null && audit.getAuditDetails().hasNonNull("recordingId")
-                ? recordingRepository
-                .findById(UUID.fromString(audit.getAuditDetails().get("recordingId").asText()))
-                .orElse(null)
+            recordingId != null
+                ? recordingRepository.findById(recordingId).orElse(null)
                 : null
         );
     }
